# deephaven-plugins

./: .dockerignore  .env  .eslintrc.js  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  babel.config.js  challenges.md  cog.toml  deephaven-changelog-template  docker-compose.docs-snapshots.yml  docker-compose.docs.yml  docker-compose.yml  jest.config.base.cjs  jest.config.lint.cjs  jest.config.unit.cjs  jest.setup.ts  lerna.json  mypy.ini  nx.json  package-lock.json  package.json  playwright-ci.config.ts  playwright-docker.config.ts  playwright.config.ts  plugin_builder.py  requirements.txt  ruff.toml  setup.cfg  tox.ini  tsconfig.eslint.json  tsconfig.json  unimplemented.md  vite.config.js  (+1 more)
.github/: CODEOWNERS  (+2 more)
plugins/ag-grid/: CHANGELOG.md  README.md  setup.cfg  setup.py  tox.ini
plugins/ag-grid/src/deephaven/ag_grid/: AgGrid.py  AgGridMessageStream.py  AgGridType.py  __init__.py  _register.py
plugins/ag-grid/src/deephaven/aggrid/: __init__.py  _js.py
plugins/ag-grid/src/js/: .env  README.md  deephaven-enterprise-jsapi-coreplus-types-1.20240517.250716090900-g82c7c67334.tgz  package.json  tsconfig.json  vite.config.ts
plugins/ag-grid/src/js/src/: AgGridCustomStyles.css  AgGridDhTheme.ts  AgGridFormatter.ts  AgGridPlugin.ts  AgGridServerSideView.tsx  AgGridTableType.ts  AgGridView.tsx  AgGridViewportView.tsx  AgGridWidget.tsx  CustomRowRenderer.tsx  DeephavenServerSideDataSource.ts  DeephavenViewportRowDataSource.ts  TreeCellRenderer.tsx  declaration.d.ts  index.ts  vite-env.d.ts
plugins/ag-grid/test/deephaven/ag-grid/: BaseTest.py  test.py
plugins/grid-toolbar/: README.md  setup.cfg  tox.ini
plugins/grid-toolbar/src/js/: package.json  vite.config.ts
plugins/grid-toolbar/src/js/src/: GridToolbarMiddleware.tsx  GridToolbarPanelMiddleware.tsx  GridToolbarPlugin.ts  PivotBuilderDialog.css  PivotBuilderDialog.tsx  index.ts  middlewareTypes.ts  pivotPlugin.d.ts  pluginAugmentations.d.ts  usePivotToggle.ts
plugins/pivot/: .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py
plugins/pivot/src/deephaven/pivot/: __init__.py  register.py
plugins/pivot/src/js/: package.json  tsconfig.build.json  vite.config.js
plugins/pivot/src/js/src/: DashboardPlugin.tsx  ExpandableColumnHeaderGroup.ts  IrisGridPivotMetricCalculator.ts  IrisGridPivotModel.test.ts  IrisGridPivotModel.ts  IrisGridPivotRenderer.test.ts  IrisGridPivotRenderer.ts  IrisGridPivotTheme.ts  IrisGridPivotTypes.ts  PivotColumnGroupMouseHandler.ts  PivotColumnHeaderGroup.ts  PivotContextMenuHandler.test.ts  PivotContextMenuHandler.ts  PivotFilterMouseHandler.test.ts  PivotFilterMouseHandler.ts  PivotMouseHandlerUtils.ts  PivotPanel.tsx  PivotPanelPlugin.tsx  PivotPlugin.ts  PivotSortMouseHandler.test.ts  PivotSortMouseHandler.ts  PivotUtils.test.ts  PivotUtils.ts  PivotWidget.tsx  README.md  index.ts  useHydratePivotGrid.ts  useIrisGridPivotModel.ts  usePivotTableUtils.ts
plugins/pivot/test/pivot/: test.py
plugins/plotly/: CHANGELOG.md  README.md  package.json  setup.cfg
plugins/plotly-express/: .gitignore  CHANGELOG.md  Makefile  README.md  conf.py  make.bat  make_docs.py  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  tox.ini  vite.config.ts
plugins/plotly-express/_ext/: helloworld.py
plugins/plotly-express/docs/: CONTRIBUTING.md  README.md  _indicator.md  area.md  bar.md  box.md  candlestick.md  choropleth-map.md  choropleth.md  conf.py  deephaven_figure.rst  density-map.md  density_heatmap.md  ecdf.md  example-data.md  filter-by.md  filter.md  funnel-area.md  funnel.md  histogram.md  icicle.md  indicator.md  layer-plots.md  limitations.md  line-3d.md  line-geo.md  line-map.md  line-polar.md  line-ternary.md  line.md  make_docs.py  matplot.md  multiple-axes.md  ohlc.md  other.md  pie.md  plot-by.md  post_make.py  requirements.txt  scatter-3d.md  (+16 more)
plugins/plotly-express/src/: Chart.tsx  ChartPanel.tsx  DashboardPlugin.tsx  PlotlyExpressChartModel.ts  PlotlyExpressChartPanel.tsx  index.ts
plugins/plotly-express/src/js/: package.json  vite.config.ts
plugins/plotly-express/src/js/src/: DashboardPlugin.tsx  PlotlyExpressChart.tsx  PlotlyExpressChartModel.test.ts  PlotlyExpressChartModel.ts  PlotlyExpressChartPanel.tsx  PlotlyExpressChartUtils.test.ts  PlotlyExpressChartUtils.ts  PlotlyExpressPlugin.ts  index.ts  useHandleSceneTicks.ts
plugins/plotly-express/test/: __init__.py
plugins/plotly-express/test/resources/: test_calendar.calendar  test_calendar_2.calendar
plugins/plotly/src/: DashboardPlugin.tsx  index.ts
plugins/plotly/src/js/: package.json
plugins/plotly/src/plotly/: Plotly.js
plugins/python-remote-file-source/: .gitignore  CHANGELOG.md  README.md  README_TEMPLATE.md  plugin_builder.py  setup.cfg  setup.py
plugins/python-remote-file-source/docs/: DESIGN.md
plugins/python-remote-file-source/src/js/: package.json  vite.config.mts
plugins/python-remote-file-source/test-node-client/: package-lock.json  package.json  tsconfig.json  vitest.config.mts
plugins/python-remote-file-source/test-node-client/src/: PythonModuleMap.mts  PythonModuleMap.ts  TestLogger.mts  constants.mts  index.mts  index.spec.mts  jsonRpc.mts  types.d.mts  utils.mts
plugins/python-remote-file-source/test-node-client/workspace/: test_absolute_imports.py  test_relative_imports.py
plugins/theme-pack/: CHANGELOG.md  README.md  setup.cfg
plugins/theme-pack/src/deephaven_plugin_theme_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/theme-pack/src/js/: README.md  package.json
plugins/theme-pack/tests/: test_noop.py
plugins/utilities/: README.md  setup.cfg
plugins_subtrees/json/: README.md  setup.cfg
plugins_subtrees/json/.github/workflows/: build.yml
plugins_subtrees/json/test/: nested_other_types.py  plain_python_types.py  unknown_python_types.json
plugins_subtrees/matplotlib/: setup.cfg
plugins_subtrees/plotly/: setup.cfg
templates/element/{{ cookiecutter.python_project_name }}/: README.md  plugin_builder.py  setup.cfg
tests/: utils.ts  (+28 more)
(+1625 files in other folders)
