[metadata]
name = deephaven-plugin-matplotlib
description = Deephaven Plugin for matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.plugin.matplotlib.__version__
url = https://github.com/deephaven/deephaven-plugin-matplotlib
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugin-matplotlib
    Bug Tracker = https://github.com/deephaven/deephaven-plugin-matplotlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Framework :: Matplotlib
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, matplotlib
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven
    deephaven-jpy
    deephaven-plugin
    matplotlib
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = *.mplstyle

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.matplotlib:MatplotlibRegistration
