[metadata]
name = deephaven-plugin-ag-grid
description = Deephaven AG Grid Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, graph
author = Mike Bender
author_email = mikebender@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.6.0
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.aggrid._register:AgGridRegistration
