[metadata]
name = deephaven-plugin-grid-toolbar
description = Deephaven Grid Toolbar Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, grid-toolbar, toolbar, middleware
author = Deephaven Data Labs
author_email = support@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.37.0
    deephaven-plugin>=0.6.0
include_package_data = True

[options.packages.find]
where=src
