[metadata]
name = deephaven-plugin-pivot
description = Deephaven Pivot Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.0
keywords = deephaven, plugin, graph
author = Deephaven
author_email = vladbabich@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.35.1
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.pivot.register:PivotRegistration
