[metadata]
name = deephaven-plugin-pivot
description = Deephaven Pivot Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.3.1.dev0
keywords = deephaven, plugin, graph
author = Deephaven
author_email = vladbabich@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.37.0
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities>=0.0.2
    typing_extensions;python_version<'3.11'
    pytz
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.pivot.register:PivotRegistration
