[metadata]
name = deephaven-plugin-plotly-express
description = Deephaven Chart Plugin
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.17.2
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, graph
author = Devin Smith, Vlad Babich, Joe Numainville
author_email = josephnumainville@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.37.6
    deephaven-plugin>=0.6.0
    plotly>=6.0.0,<7.0.0
    deephaven-plugin-utilities>=0.0.2
    typing_extensions;python_version<'3.11'
    jpy
include_package_data = True

[options.extras_require]
all = kaleido<1.0.0

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plot.express._register:ExpressRegistration
