[metadata]
name = deephaven-plugin-python-remote-file-source
description = Deephaven plugin for sourcing Python files from a remote location
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
keywords = deephaven, plugin, graph
author = deephaven
author_email = Anonymous
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.35.1
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.python_remote_file_source.register:PluginRegistration
