[metadata]
name = deephaven-plugin-python-remote-file-source
description = A Deephaven bi-directional plugin to allow sourcing Python imports from a remote file source.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin
author = Deephaven Data Labs
author_email = support@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.35.1
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.python_remote_file_source.register:PluginRegistration
