[metadata]
name = deephaven-plugin-theme-pack
description = Deephaven Theme Pack Plugin
long_description = file: src/js/README.md
long_description_content_type = text/markdown
version = 0.1.2.dev0
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, theme, theme-pack
author = Deephaven Data Labs
author_email = support@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.37.0
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities>=0.0.2
    typing_extensions;python_version<'3.11'
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.theme_pack._register:ThemePackRegistration
