[metadata]
name = deephaven-plugin-utilities
description = Deephaven Plugin Utilities
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.3.dev0
url = https://github.com/deephaven/deephaven-plugins
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugins
    Bug Tracker = https://github.com/deephaven/deephaven-plugins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, utilities
author = Joe Numainville
author_email = josephnumainville@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.6.0
include_package_data = True

[options.packages.find]
where=src
