[metadata]
name = deephaven-plugin-json
description = Deephaven Plugin for json
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.plugin.json.__version__
url = https://github.com/deephaven/deephaven-plugin-json
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugin-json
    Bug Tracker = https://github.com/deephaven/deephaven-plugin-json/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, json
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.json:JsonRegistration
