[metadata]
name = deephaven-plugin-plotly
description = Deephaven Plugin for Plotly
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.plugin.plotly.__version__
url = https://github.com/deephaven/deephaven-plugin-plotly
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugin-plotly
    Bug Tracker = https://github.com/deephaven/deephaven-plugin-plotly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, plotly
author = Devin Smith, Vlad Babich
author_email = vladbabich@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.5.0
    plotly
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.plotly:PlotlyRegistration
