[metadata]
name = {{cookiecutter.python_project_name}}
description = plugin for deephaven
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
keywords = deephaven, plugin, graph
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-core>=0.35.1
    deephaven-plugin>=0.6.0
    deephaven-plugin-utilities
    deephaven-plugin-ui
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = {{ cookiecutter.__py_namespace }}.register:{{ cookiecutter.__registration_name }}
